--- a/src/app/update-hotel/update-hotel.component.html
+++ b/src/app/update-hotel/update-hotel.component.html
@@ -1,1 +1,51 @@
-<p>update-hotel works!</p>
+<div class="col-md-6 offset-md-3">
+    <h3> Update Hotel </h3>
+    <form (ngSubmit) = "onSubmit()">
+    
+        <div class="form-group">
+            <label> City Id</label>
+            <input type="number" class ="form-control" id = "city_id"
+                [(ngModel)] = "hotel.city_id" name = "city_id">
+        </div>
+    
+        <div class="form-group">
+            <label> Hotel Name</label>
+            <input type="string" class ="form-control" id = "hotel_name"
+                [(ngModel)] = "hotel.hotel_name" name = "hotel_name">
+        </div>
+    
+        <div class="form-group">
+            <label> Id</label>
+            <input type="number" class ="form-control" id = "id"
+                [(ngModel)] = "hotel.id" name = "id">
+        </div>
+    
+        <div class="form-group">
+            <label> Price</label>
+            <input type="number" class ="form-control" id = "price"
+                [(ngModel)] = "hotel.price" name = "price">
+        </div>  
+              <div class="form-group">
+            <label> Address</label>
+            <input type="string" class ="form-control" id = "address"
+                [(ngModel)] = "hotel.address" name = "address">
+        </div>   
+             <div class="form-group">
+            <label>Photos</label>
+            <input type="string" class ="form-control" id = "photos"
+                [(ngModel)] = "hotel.photos" name = "photos">
+        </div>
+            <div class="form-group">
+            <label>Review</label>
+            <input type="string" class ="form-control" id = "Review"
+                [(ngModel)] = "hotel.Review" name = "Review">
+        </div>
+            <div class="form-group">
+            <label>Rating</label>
+            <input type="string" class ="form-control" id = "Rating"
+                [(ngModel)] = "hotel.Rating" name = "Rating">
+        </div>
+        <button class = "btn btn-success" type ="submit">Submit</button>
+    
+    </form>
+    </div> 
