--- a/src/app/booking-list/booking-list.component.html
+++ b/src/app/booking-list/booking-list.component.html
@@ -5,10 +5,9 @@
             <th> Hotel Id</th>
             <th> Start Date </th>
             <th> End Date</th>
-            <th> Booking Id</th>
             <th> Customer Id </th>
             <th> Room No.</th>
-            <th> Action </th>
+            <th> Update </th>
         </tr>
     </thead>
     <tbody>
@@ -18,9 +17,9 @@
             <td> {{ booking.end_date }} </td>
             <td> {{ booking.customer_id }} </td>
             <td> {{ booking.Room_no }} </td>
-             <td>
+             <!-- <td>
                 <button (click) = "updateBooking(booking.id)" class = "btn btn-info"> Update </button>
-            </td> 
+            </td>  -->
 
         </tr>
     </tbody>
