--- a/src/app/customer-list/customer-list.component.html
+++ b/src/app/customer-list/customer-list.component.html
@@ -13,6 +13,10 @@
             <td> {{ customerlist.cust_id }} </td>
             <td> {{ customerlist.name }} </td>
             <td> {{ customerlist.id_proof }} </td>
+            <td>
+                <button (click) = "updateCustomer(customerlist.cust_id)" class = "btn btn-info"> Update </button>
+                <button (click) = "deleteCustomer(customerlist.cust_id)" class = "btn btn-danger" style="margin-left: 10px"> Delete</button>
+            </td> 
         </tr>
     </tbody>
 </table>
