--- a/src/app/customer-list/customer-list.component.html
+++ b/src/app/customer-list/customer-list.component.html
@@ -14,9 +14,9 @@
             <td> {{ customerlist.name }} </td>
             <td> {{ customerlist.id_proof }} </td>
             <td>
-                <button (click) = "updateCustomer(customerlist.cust_id)" class = "btn btn-info"> Update </button>
-                <button (click) = "deleteCustomer(customerlist.cust_id)" class = "btn btn-danger" style="margin-left: 10px"> Delete</button>
-            </td> 
+                <button class = "btn btn-info"> Update </button>
+                <button class = "btn btn-danger" style="margin-left: 10px"> Delete</button>
+            </td>  
         </tr>
     </tbody>
 </table>
