--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+ <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
     <ul class = "navbar-nav">
         <li class = "nav-item">
             <a routerLink="bookings" routerLinkActive="active" class="nav-link" >Booking List</a>
@@ -12,8 +12,16 @@
 <h1 class="text-center"> {{title}} </h1>
 <div class = "container">
 <router-outlet> </router-outlet>
-</div>
+</div> 
 
+<!-- Toolbar -->
+<mat-toolbar color="primary" class="app-header">
+    <div> <a>Book Mine</a></div>
+    <span class="nav-tool-items">
+      <a mat-button routerLink="login" routerLinkActive="active">Log in</a>
+      <a mat-button mat-raised-button routerLink="register" routerLinkActive="active">Register</a>
+    </span>
+  </mat-toolbar>
 <footer class = "footer">
     <div class = "container">
         <span>All Rights Reserved 2020 @TavCollage</span>
