--- a/src/app/booking-list/booking-list.component.html
+++ b/src/app/booking-list/booking-list.component.html
@@ -18,9 +18,9 @@
             <td> {{ booking.customer_id }} </td>
             <td> {{ booking.Room_no }} </td>
             <td>
-                <button (click) = "updateBooking(booking.booking_id)" class = "btn btn-info"> Update </button>
-                <button (click) = "deleteBooking(booking.booking_id)" class = "btn btn-danger" style="margin-left: 10px"> Delete</button>
-            </td>  
+                <button (click)="updateBooking(1)" class = "btn btn-info"> Update </button>
+                <button (click)="deleteBooking(1)" style="margin-left: 10px"> Delete</button>
+            </td>   
 
         </tr>
     </tbody>
